Informative commit message.